# g2basic

./: .clang-format  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/: CI_README.md
.github/workflows/: build-linux.yml
docs/: README.md
examples/interactive/: CMakeLists.txt  main.c
src/: CMakeLists.txt  expr.c  expr.h  g2basic.c  g2basic.h  main.c
